libs/wingc/src/jsify/mangling/snapshots/wingc__jsify__mangling__tests__simple_objects.snap
---
source: libs/wingc/src/jsify/mangling/tests.rs
expression: result.to_string()
---
keys: MyClass,a,hello



